Fixes keyboard icon on results page, fixes spacing issue

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -126,7 +126,6 @@
     display: inline-block;
     height: 44px;
     outline: none;
-    padding: 0.5rem;
     width: 44px;
   }
 
